fdo#68588 Don't use embeddeddbList unless present.

embeddeddbList is only present in generalpagewizard.ui but not in
generalpagedialog.ui, generalpage.cxx is used to control both of
these dialogs. Since embeddeddbList is only relevant for the creation
of dbs we can disable it's use in the latter case to prevent a crash
when trying to retrieve the non-exiting list.

Change-Id: I7c52493e12b40d9043d80fb023cfc9eb9c9e42ec